--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,7 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+  
   <servlet>
     <servlet-name>appServlet</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -16,16 +17,19 @@
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
+  
   <servlet-mapping>
     <servlet-name>appServlet</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <description></description>
     <display-name>MyServlet</display-name>
     <servlet-name>MyServlet</servlet-name>
     <servlet-class>lecture.p03core.MyServlet</servlet-class>
   </servlet>
+  
   <servlet-mapping>
     <servlet-name>MyServlet</servlet-name>
     <url-pattern>/MyServlet</url-pattern>
@@ -36,8 +40,27 @@
     <servlet-name>Myservlet</servlet-name>
     <servlet-class>lecture.p06core.Myservlet</servlet-class>
   </servlet>
+  
   <servlet-mapping>
     <servlet-name>Myservlet</servlet-name>
     <url-pattern>/Myservlet</url-pattern>
   </servlet-mapping>
+  
+  <!-- 필터 등록(한글) p.243-->
+  <!-- Character Encoding Filter -->
+	<filter>
+		<filter-name>encoding</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>encoding</filter-name>
+		<servlet-name>appServlet</servlet-name>
+	</filter-mapping>
+	
+	  	
 </web-app>
